--- a/index.html
+++ b/index.html
@@ -561,7 +561,7 @@
                     pointer-events: none;
                     text-shadow: 2px 2px 4px rgba(0,0,0,0.3);
                 `;
-                welcomeEffect.textContent = '你终于来啦！😊';
+                welcomeEffect.textContent = '哇~你来啦！😊';
                 
                 const style = document.createElement('style');
                 style.textContent = `
