--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
 
         .animated-text {
             text-align: center;
-            font-size: 24px;
+            font-size: 18px;
             font-weight: bold;
             background: linear-gradient(45deg, #ff6b6b, #4ecdc4, #45b7d1, #96ceb4, #feca57, #ff9ff3);
             background-size: 400% 400%;
@@ -296,7 +296,7 @@
         /* 手机适配 */
         @media (max-width: 768px) {
             .animated-text {
-                font-size: 24px;
+                font-size: 18px;
             }
             
             .gif-image {
@@ -338,7 +338,7 @@
     </div>
     
     <div class="animated-text">
-        ✨罗小黑开心吃汉堡🍔
+        ✨你要天天开心哦~🍔
     </div>
 
     <script>
@@ -555,7 +555,7 @@
                     top: 20%;
                     left: 50%;
                     transform: translate(-50%, -50%);
-                    font-size: 50px;
+                    font-size: 25px;
                     z-index: 1000;
                     animation: welcomePop 2s ease-out forwards;
                     pointer-events: none;
