更改了标题

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>罗小黑开心吃汉堡</title>
+    <title>咖喱永远要开心哦~</title>
     <style>
         * {
             margin: 0;
